# StakEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dependencies.lua  README.md  TODO.txt  compile_commands.json  premake5.lua
Assets/Shaders/: QuadShader.glsl
Engine/Assets/Shaders/: Basic.glsl  QuadShader.glsl
Engine/Source/Editor/: CMakeLists.txt  TempMain.cpp
Engine/Source/Editor/Core/: Editor.cpp  EditorLayer.cpp  EditorLayer.h
Engine/Source/Editor/Renderer/: UIRenderer.h
Engine/Source/Runtime/: CMakeLists.txt  Runtime.h
Engine/Source/Runtime/AssetLoading/: File.h  Font.h  Image.cpp  Image.h
Engine/Source/Runtime/Core/: AppLayer.h  Application.cpp  Application.h  ApplicationLayer.h  EntryPoint.h  Event.h  Input.h  InputManager.h  Log.cpp  Log.h  Platform.h  Types.h  Window.h
Engine/Source/Runtime/Core/Private/: Application.cpp  InputManager.cpp  Log.cpp  Window.cpp  WindowManager.cpp
Engine/Source/Runtime/Core/Public/: Application.h  ApplicationLayer.h  EntryPoint.h  Event.h  Input.h  InputManager.h  Log.h  Types.h  Window.h  WindowManager.h
Engine/Source/Runtime/Math/: StakMath.cpp  StakMath.h
Engine/Source/Runtime/Math/Matrix/: Mat.h  Mat2x2.h  Mat2x2.inl  Mat2x2Types.h  Mat3x3.h  Mat3x3.inl  Mat3x3Types.h  Mat4x4.h  Mat4x4.inl  Mat4x4Types.h
Engine/Source/Runtime/Math/Matrix/Public/: Mat.h  Mat2x2.h  Mat2x2.inl  Mat2x2Types.h  Mat3x3.h  Mat3x3.inl  Mat3x3Types.h  Mat4x4.h  Mat4x4.inl  Mat4x4Types.h
Engine/Source/Runtime/Math/Vector/: Operations.h  Operations.inl  Vec.h  Vec1.h  Vec1.inl  Vec1Types.h  Vec2.h  Vec2.inl  Vec2Types.h  Vec3.h  Vec3.inl  Vec3Types.h  Vec4.h  Vec4.inl  Vec4Types.h
Engine/Source/Runtime/Math/Vector/Public/: Vec.h  Vec1.h  Vec1.inl  Vec1Types.h  Vec2.h  Vec2.inl  Vec2Types.h  Vec3.h  Vec3.inl  Vec3Types.h  Vec4.h  Vec4.inl  Vec4Types.h
Engine/Source/Runtime/Platform/: OpenGL.cpp  OpenGL.h  WGL.cpp  WGL.h  Win32.cpp  Win32.h  X11.cpp  X11.h
Engine/Source/Runtime/Platform/Linux/: LinuxGLContext.cpp  LinuxInputManager.cpp  LinuxWindow.h
Engine/Source/Runtime/Platform/Linux/Private/: LinuxGLContext.cpp  LinuxWindow.cpp
Engine/Source/Runtime/Platform/Linux/Public/: LinuxGLContext.h  LinuxInputManager.h  LinuxWindow.h
Engine/Source/Runtime/Platform/Manager/: PlatformManager.cpp.old  PlatformManager.h.old
Engine/Source/Runtime/Platform/Manager/Private/: PlatformManager.cpp
Engine/Source/Runtime/Platform/Manager/Public/: PlatformManager.h
Engine/Source/Runtime/Platform/OpenGL/: GLContext.h  OpenGLBindings.cpp  OpenGLBindings.h  OpenGLBuffer.cpp  OpenGLBuffer.h.old  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h.old  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp.old  OpenGLTexture.h.old  OpenGLVertexArray.cpp.old  OpenGLVertexArray.h.old
Engine/Source/Runtime/Platform/OpenGL/Private/: OpenGLBindings.cpp  OpenGLBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
Engine/Source/Runtime/Platform/OpenGL/Public/: GLContext.h  GlContext.h  OpenGLBindings.h  OpenGLBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  glext.h
Engine/Source/Runtime/Platform/Vulkan/Private/: ValidationLayers.cpp  VulkanRenderer.cpp
Engine/Source/Runtime/Platform/Vulkan/Public/: ValidationLayers.h  VulkanRenderer.h
Engine/Source/Runtime/Platform/WGL/: WGL.cpp  WGLContext.cpp  WGLContext.h
Engine/Source/Runtime/Platform/Win32/: Win32.cpp  Win32.h  Win32GLContext.cpp.old  Win32GLContext.h.old  Win32InputManager.cpp.old  Win32InputManager.h.old  Win32Platform.cpp  Win32Platform.h  Win32Window.cpp  Win32Window.cpp.old  Win32Window.h  Win32Window.h.old
Engine/Source/Runtime/Platform/Win32/Private/: Win32GLContext.cpp  Win32Input.cpp  Win32InputManager.cpp  Win32Window.cpp
Engine/Source/Runtime/Platform/Win32/Public/: Win32GLContext.h  Win32Input.h  Win32InputManager.h  Win32Window.h
Engine/Source/Runtime/Renderer/: Buffer.h  Camera.cpp  Camera.cpp.old  Camera.h  Camera.h.old  Context.h  RenderCommand.cpp  RenderCommand.h.old  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h.old  Shader.h  Texture.h.old  VertexArray.h
Engine/Source/Runtime/Renderer/Private/: Camera.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp
Engine/Source/Runtime/Renderer/Public/: Buffer.h  Camera.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h
Engine/Source/Runtime/Rendering/Public/: Buffer.h  Renderer.h
Engine/Source/Runtime/Scene/: Component.h  Entity.h  Registry.cpp  Registry.h  Scene.h
Scripts/: build.bat  build.sh  build_debug  build_debug.bat  run.bat  run_debug.bat  run_tests.bat  test.bat
StakEditor/: CMakeLists.txt  Editor.cpp  EditorLayer.cpp  EditorLayer.h  UIRenderer.h
StakEngine/: Application.cpp  Application.h  ApplicationLayer.h  Asserts.h  CMakeLists.txt  Camera.cpp  Camera.h  Component.h  EntryPoint.h  Event.h  File.h  Font.h  Image.h  Input.h  Linux.cpp  Log.cpp  Log.h  OpenGL.cpp  OpenGL.h  Platform.h  Registry.cpp  Renderer.cpp  Renderer.h  StakEngine.h  StakMath.cpp  StakMath.h  Types.h  WGL.cpp  Win32.cpp  Window.h  WindowsPlatform.h  X11.cpp  premake5.lua
StakEngine/src/: StakEngine.h  stkpch.cpp  stkpch.h
StakEngine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
StakEngine/src/StakEngine/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  STK_ASSERT.h  Window.cpp  Window.h
StakEngine/src/StakEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
StakEngine/src/StakEngine/Renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
TestApp/: premake5.lua
TestApp/assets/shaders/: Basic.shader
TestApp/src/: TestApp.cpp  TestAppLayer.cpp  TestAppLayer.h
Tests/: CMakeLists.txt  TestCore.cpp  UnitTests.cpp
